--- a/Chat-Chan/MainWindow.xaml
+++ b/Chat-Chan/MainWindow.xaml
@@ -84,10 +84,10 @@
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="50" />
                 </Grid.ColumnDefinitions>
-                <TextBox x:Name="tbSession" Grid.Column="0" Background="Transparent" BorderThickness="0" FontSize="15" IsEnabled="False" />
+                <TextBox x:Name="tbSession" Grid.Column="0" Background="Transparent" BorderThickness="0" FontSize="15" IsEnabled="False" KeyDown="TbSession_KeyDown" />
                 <Separator Grid.Column="1" Margin="5, 3, 0, 3" />
                 <Separator Grid.Column="1" Margin="5, 3, 0, 3" />
-                <TextBox x:Name="tbMessage" Grid.Column="2" Background="Transparent" BorderThickness="0" FontSize="15" IsEnabled="False" />
+                <TextBox x:Name="tbMessage" Grid.Column="2" Background="Transparent" BorderThickness="0" FontSize="15" IsEnabled="False" KeyDown="TbMessage_KeyDown" />
                 <Button x:Name="btnSend" Grid.Column="3" Background="Transparent" BorderBrush="Transparent" Click="BtnSend_Click" IsEnabled="False">
                     <Image Source="Images/send.png"  Width="28" Height="28" />
                 </Button>
