--- a/Chat-Chan/MainWindow.xaml
+++ b/Chat-Chan/MainWindow.xaml
@@ -20,23 +20,25 @@
         
         <!--#region コンソール-->
         <Grid Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center">
-            <TextBlock Text="接続" FontSize="30" FontWeight="SemiBold" TextAlignment="Center" />
-            <TextBlock Text="他のサーバーに接続してチャットを開始します。" TextAlignment="Center" />
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="50" />
-                </Grid.ColumnDefinitions>
-                <TextBox x:Name="tbSessionName" Grid.Column="0" />
-                <Button x:Name="btnSessionStart" Grid.Column="1" Content="接続" Click="BtnSessionStart_Click" />
-            </Grid>
+            <StackPanel>
+                <TextBlock Text="接続" FontSize="30" FontWeight="SemiBold" TextAlignment="Center" />
+                <TextBlock Text="他のサーバーに接続してチャットを開始します。" TextAlignment="Center" />
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="50" />
+                    </Grid.ColumnDefinitions>
+                    <TextBox x:Name="tbSessionName" Grid.Column="0" />
+                    <Button x:Name="btnSessionStart" Grid.Column="1" Content="接続" Click="BtnSessionStart_Click" />
+                </Grid>
+            </StackPanel>
         </Grid>
         <StackPanel VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10">
             <TextBlock Text="名前" FontSize="15" />
             <TextBox x:Name="tbNickName" FontSize="15" Width="150" />
         </StackPanel>
         <TextBlock x:Name="tbSessionError" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="5" Foreground="OrangeRed" />
-        <TextBox x:Name="tbConsole" Grid.Row="0" BorderThickness="1" Background="#282C34" Foreground="#DCDFE4" FontSize="12" Panel.ZIndex="5" />
+        <TextBox x:Name="tbConsole" Grid.Row="0" BorderThickness="1" Background="#282C34" Foreground="#DCDFE4" FontSize="12" Panel.ZIndex="5" Visibility="Collapsed" />
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="15, 15" Panel.ZIndex="10">
             <Button x:Name="btnEndSession" Grid.Row="0" BorderBrush="Transparent" Background="Transparent" BorderThickness="0" Height="48" Width="48" Click="BtnEndSession_Click">
                 <Image Source="Images/exit.png" Height="35" Width="35" />
