--- a/Chat-Chan/MainWindow.xaml
+++ b/Chat-Chan/MainWindow.xaml
@@ -40,11 +40,11 @@
         <TextBlock x:Name="tbSessionError" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="5" Foreground="OrangeRed" />
         <TextBox x:Name="tbConsole" Grid.Row="0" BorderThickness="1" Background="#282C34" Foreground="#DCDFE4" FontSize="12" Panel.ZIndex="5" Visibility="Collapsed" />
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="15, 15" Panel.ZIndex="10">
-            <Button x:Name="btnEndSession" Grid.Row="0" BorderBrush="Transparent" Background="Transparent" BorderThickness="0" Height="48" Width="48" Click="BtnEndSession_Click">
-                <Image Source="Images/exit.png" Height="35" Width="35" />
+            <Button x:Name="btnEndSession" Grid.Row="0" Height="45" Width="45" Click="BtnEndSession_Click">
+                <Image Source="Images/exit.png" Height="25" Width="25" />
             </Button>
-            <Button x:Name="btnSettings" Grid.Row="0" Background="Transparent" BorderBrush="Transparent" Margin="15, 0, 0, 0" Height="48" Width="48" Click="BtnSettings_Click">
-                <Image Source="Images/settings.png" Height="40" Width="40" />
+            <Button x:Name="btnSettings" Grid.Row="0" Margin="15, 0, 0, 0" Height="45" Width="45" Click="BtnSettings_Click">
+                <Image Source="Images/settings.png" Height="30" Width="30" Margin="-3,0,0,0" />
             </Button>
         </StackPanel>
         <!--#endregion-->
